--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.json filter=lfs diff=lfs merge=lfs -text
 *.ipynb filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+*.pth filter=lfs diff=lfs merge=lfs -text
